# jobflow

./: .gitignore  README.md  package-lock.json  package.json
app/backend/: pyproject.toml
app/backend/app/: __init__.py  main.py
app/backend/app/adapters/: __init__.py  ashby.py  base.py  generic.py  greenhouse.py  lever.py  oracle.py  registry.py  workday.py
app/backend/app/api/: __init__.py  routes.py
app/backend/app/core/: config.py
app/backend/app/db/: database.py
app/backend/app/models/: __init__.py  schemas.py
app/backend/app/services/: __init__.py  ai_orchestrator.py  browser_controller.py  chat_adjustment.py  demo_pages.py  document_vault.py  event_bus.py  fill_plan.py  fill_plan_review.py  form_extraction.py  prompt_context.py  redaction.py  safe_fill.py  success_detection.py
app/backend/app/tools/: __init__.py  profile_tools.py
app/backend/tests/fixtures/: ashby_application.html  generic_application.html  greenhouse_application.html  lever_application.html  oracle_application.html  workday_application.html
app/backend/tests/integration/: test_api.py
app/backend/tests/unit/: test_adapters.py  test_ai_orchestrator.py  test_browser_controller.py  test_chat_adjustment.py  test_demo_pages.py  test_event_bus.py  test_fill_plan.py  test_fill_plan_review.py  test_form_extraction.py  test_prompt_context.py  test_safe_fill.py  test_success_detection.py
app/desktop/: package.json  vite.config.ts
app/desktop/src/: App.tsx  AssistantWindow.tsx  (+2 more)
app/desktop/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: dev.mjs  generate_tauri_icon.mjs  smoke.mjs
(+12 files in other folders)
