[project]
name = "jobflow-backend"
version = "0.1.0"
description = "Local FastAPI sidecar for JobFlow."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "playwright>=1.46.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
